test/functions/resolution/errors/receiver-type-mismatch.compopts
-stestNum=1 # receiver-type-mismatch.1.good
-stestNum=2 # receiver-type-mismatch.2.good
